进一步完善框架